[gd_scene load_steps=2 format=3 uid="uid://bilo3wsfxrfhw"]

[ext_resource type="Script" path="res://MainGame/Computer/computer_stocks.gd" id="1_avcdi"]

[node name="computer_stocks" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_avcdi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -360.0
offset_right = 240.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "Stock Exchange"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentInvestments" type="ItemList" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -285.0
offset_right = 220.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28

[node name="Invest" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 95.0
offset_right = -20.0
offset_bottom = 155.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 28
text = "Invest"

[node name="InvestingAmount" type="TextEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 95.0
offset_right = 340.0
offset_bottom = 155.0
grow_vertical = 2
theme_override_font_sizes/font_size = 28
placeholder_text = "Amount to invest . . ."

[node name="Sell" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 175.0
offset_right = -20.0
offset_bottom = 235.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 28
text = "Sell"

[node name="MoneyAmount" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -229.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = 151.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 50.0
offset_right = 280.0
offset_bottom = 130.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 24
text = "Return "

[connection signal="pressed" from="Panel/Invest" to="." method="_on_invest_pressed"]
[connection signal="pressed" from="Panel/Sell" to="." method="_on_sell_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
